--- a/windows/data/content/index.html
+++ b/windows/data/content/index.html
@@ -1,10 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Auto-Driller</title></head><body><h1 ng-click="showControlPanel=!showControlPanel"></h1><div id="controlPanel" ng-show="showControlPanel"><div>Control Panel goes here</div></div></body></html>
